frontend-virtual-service-canary-email-weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtual-service
spec:
  hosts:
  - frontend.apps.SUBDOMAIN
  gateways:
  - wildcard-gateway.control-plane.svc.cluster.local
  http:
  - match:
    - headers:
        cookie:
          regex: "^(.*?;)?(email=[^;]*@hklab-redhat.com)(;.*)?$"
    route:
    - destination:
        host: frontend
        port:
          number: 8080
        subset: v1
      weight: 0
    - destination:
        host: frontend
        port:
          number: 8080
        subset: v2
      weight: 100
  - route:
    - destination:
        host: frontend
        port:
          number: 8080
        subset: v1
